fix add and filter projects layout and add scrollbars

--- a/app/assets/styles/components/_forms.scss
+++ b/app/assets/styles/components/_forms.scss
@@ -227,9 +227,10 @@ footer {
 
 .form__fieldset {
   padding: 0 0 ($global-spacing * 1.5) 0;
-  margin: 0 0 ($global-spacing * 1.5) 0;
+  margin: 0 ($global-spacing * 2) ($global-spacing * 1.5) 0;
   border: 0;
   position: relative;
+  max-width: 300px;
 
   &:last-child {
     padding-bottom: 0;
